--- a/index.html
+++ b/index.html
@@ -2,6 +2,29 @@
 <html>
 <head>
     <title>Próximamente</title>
+   
+</head>
+<body>
+    <h1>Coming Soon</h1>
+    <p>We're working on something awesome. Stay tuned!</p>
+
+ <h1>Únete a nuestra newsletter y podrás recibir descuentos, promociones exclusivas y novedades! </h1> 
+    <div class="waitlist-form">
+        <input type="email" class="waitlist-input" placeholder="Enter your email address">
+        <button class="waitlist-button">Join Waitlist</button>
+    </div>
+    <br>
+    <br>
+        <div class="store-text">
+        <a href="https://www.instagram.com/lvdugg" class="social-link">
+            <img src="icons8-instagram-50.png" alt="Instagram Icon" />
+        </a>
+        <br>
+    <br>
+    </div>
+    <img src="PHOTO-2024-05-08-16-14-20 9.jpg" alt="Coming Soon Image">
+   
+</body>
     <style>
         body {
             text-align: center;
@@ -27,16 +50,5 @@
        
     </style>
 </head>
-<body>
-    <h1>Coming Soon</h1>
-    <p>We're working on something awesome. Stay tuned!</p>
-    <div class="store-text">
-        <a href="https://www.instagram.com/lvdugg" class="social-link">
-            <img src="icons8-instagram-50.png" alt="Instagram Icon" />
-        </a>
-    </div>
-    </div>
-    <img src="PHOTO-2024-05-08-16-14-20 9.jpg" alt="Coming Soon Image">
-   
-</body>
+
 </html>
